--- a/Front_end_assignment/3/style.css
+++ b/Front_end_assignment/3/style.css
@@ -152,6 +152,17 @@ background-color : rgba(145, 145, 145, 0.212)
     background-color: rgba(236, 26, 61, 0.212);
 }
 
+.discography table{
+    position: absolute;
+    padding : 30px;
+    border:1px red solid;
+    margin: 100px;
+    text-align : center;
+    color : #d82c2c;
+    font-family: 'Black Han Sans', sans-serif;
+    font-size:20px;
+}
+
 #maintext{
 
     font-family: 'Nanum Brush Script', cursive;
